--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p>You can stop all collection of information by the Application by uninstalling it using standard processes available on your device or app marketplace.</p>
 
     <h2>Data Retention Policy</h2>
-    <p>The Service Provider will retain User Provided data for as long as you use the Application and for a reasonable time afterward. To request deletion, please email: <a href="mailto:okechukwulovesjesus@gmail.com">okechukwulovesjesus@gmail.com</a>.</p>
+    <p>The Service Provider will retain User Provided data for as long as you use the Application and for a reasonable time afterward. To request deletion, please email: <a href="mailto:travisdejohnminor@gmail.com">travisdejohnminor@gmail.com</a>.</p>
 
     <h2>Children</h2>
     <p>The Application does not target children under 13 and does not knowingly collect personal information from children under 13. If discovered, such information will be deleted. Parents may contact the Service Provider for necessary action.</p>
@@ -58,7 +58,7 @@
 
     <h2>Changes</h2>
     <p>This Privacy Policy may be updated occasionally. You are advised to review it periodically. Continued use implies acceptance of any changes.</p>
-    <p>This privacy policy is effective as of 2025-04-22.</p>
+    <p>This privacy policy is effective as of 2025-05-24.</p>
 
     <h2>Your Consent</h2>
     <p>By using the Application, you consent to the processing of your information as outlined in this policy.</p>
