--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>This privacy policy applies to the GPS Location Camera & Timestamp for Android app (hereby referred to as "Application") for mobile devices that was created by Order of Infinity (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".</p>
+    <p>This privacy policy applies to the GPS Location Camera & Timestamp for Android app (hereby referred to as "Application") for mobile devices that was created by <NGUYEN QUANG MINH> (hereby referred to as "Service Provider") as a Free service.</p>
 
     <h2>Information Collection and Use</h2>
     <p>The Application collects information when you download and use it. This information may include:</p>
     <ul>
-        <li>Your device's Internet Protocol address (e.g. IP address)</li>
-        <li>The pages of the Application that you visit, the time and date of your visit, the time spent on those pages</li>
-        <li>The time spent on the Application</li>
-        <li>The operating system you use on your mobile device</li>
+        <li>Your device’s Internet Protocol address (IP address)</li>
+        <li>Pages you visit within the Application, along with timestamps</li>
+        <li>Operating system and device type</li>
+        <li><strong>Precise GPS location data</strong> (if granted by you)</li>
+        <li><strong>Photographs captured via the Application, which may embed GPS coordinates and timestamp metadata</strong></li>
     </ul>
-    <p>The Application does not gather precise information about the location of your mobile device.</p>
-    <p>The Service Provider may use the information you provided to contact you from time to time to provide you with important information, required notices and marketing promotions.</p>
-    <p>For a better experience, while using the Application, the Service Provider may require you to provide certain personally identifiable information. The information requested will be retained and used as described in this privacy policy.</p>
-
+     <p>Location data is used solely to embed GPS coordinates and timestamps into captured images, allowing users to organize, review, and reference their photos.</p>
+    <p>The Service Provider does not store your location data or photos on any server unless explicitly backed up by the user or shared via third-party services.</p>
+    <p>User consent is required before accessing the device camera or GPS location.</p>
     <h2>Third Party Access</h2>
     <p>Only aggregated, anonymized data is periodically transmitted to external services to aid in improving the Application and service. Information may be shared with third parties as described below:</p>
     <p>Third-party service providers with their own privacy policies include:</p>
@@ -58,7 +58,7 @@
 
     <h2>Changes</h2>
     <p>This Privacy Policy may be updated occasionally. You are advised to review it periodically. Continued use implies acceptance of any changes.</p>
-    <p>This privacy policy is effective as of 2025-05-24.</p>
+    <p>This privacy policy is effective as of 2025-05-26.</p>
 
     <h2>Your Consent</h2>
     <p>By using the Application, you consent to the processing of your information as outlined in this policy.</p>
