--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
         <li>Your device’s Internet Protocol address (IP address)</li>
         <li>Pages you visit within the Application, along with timestamps</li>
         <li>Operating system and device type</li>
-        <li><strong>Precise GPS location data</strong> (if granted by you)</li>
-        <li><strong>Photographs captured via the Application, which may embed GPS coordinates and timestamp metadata</strong></li>
+          <li>Precise GPS location (if permission is granted)</li>
+    <li>Photos and videos captured using the Application</li>
+    <li>Metadata embedded in photos/videos, such as GPS location and timestamp</li>
     </ul>
+    <p>The Application uses your device's camera and location services to allow you to:</p>
+<ul>
+    <li>Capture photos and videos</li>
+    <li>Automatically tag them with location (GPS coordinates) and time information</li>
+</ul>
      <p>Location data is used solely to embed GPS coordinates and timestamps into captured images, allowing users to organize, review, and reference their photos.</p>
     <p>The Service Provider does not store your location data or photos on any server unless explicitly backed up by the user or shared via third-party services.</p>
     <p>User consent is required before accessing the device camera or GPS location.</p>
