--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>This privacy policy applies to the GPS Location Camera & Timestamp for Android app (hereby referred to as "Application") for mobile devices that was created by <NGUYEN QUANG MINH> (hereby referred to as "Service Provider") as a Free service.</p>
+    <p>This privacy policy applies to the GPS Location Camera & Timestamp for Android app (hereby referred to as "Application") for mobile devices that was created by NGUYEN QUANG MINH (hereby referred to as "Service Provider") as a Free service.</p>
 
     <h2>Information Collection and Use</h2>
     <p>The Application collects information when you download and use it. This information may include:</p>
