--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="https://www.facebook.com/about/privacy/update/printable" target="_blank">Facebook</a></li>
         <li><a href="https://unity.com/legal/privacy-policy" target="_blank">Unity</a></li>
         <li><a href="https://www.applovin.com/privacy/" target="_blank">AppLovin</a></li>
-        <li><a href="https://liftoff.io/privacy-policy/" target="_blank">Vungle</a></li>
+        <li><a href="https://liftoff.io/privacy-policy" target="_blank">Vungle</a></li>
         <li><a href="https://www.adjust.com/terms/privacy-policy" target="_blank">Adjust</a></li>
     </ul>
     <p>Information may be disclosed:</p>
